--- a/package.json
+++ b/package.json
@@ -20,8 +20,20 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@ks89/angular-modal-gallery": "^6.3.0",
+    "@types/hammerjs": "^2.0.36",
+    "@types/mousetrap": "^1.6.0",
+    "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "font-awesome": "^4.7.0",
+    "hammerjs": "^2.0.8",
+    "jquery": "^1.9.1",
+    "mousetrap": "^1.6.2",
+    "ngx-bootstrap": "^3.0.1",
+    "ngx-image-gallery": "^1.3.1",
+    "popper.js": "^1.14.4",
     "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
